fix DT-1576, fix gap between images in image gallery on Firefox

--- a/less/widgets.less
+++ b/less/widgets.less
@@ -367,7 +367,7 @@
         }
         .widget__gallery .gallery-item  {
             width: 90%;
-            margin: 0 auto 4%;
+            margin: 0 auto 20px;
         }
     }
 }
@@ -604,7 +604,7 @@
     }
     .gallery__gallery-item {
         width: 100%;
-        margin: 0 auto 4%;
+        margin: 0 auto 20px;
     }
 }
 
